--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,6 +1,7 @@
-name=My ScalaPB Plugin
+name=my-scalapb-plugin
 description=Say something about this template.
 organization=org.example
 package=$organization$
 scalapb_version=maven(com.thesamet.scalapb, compilerplugin_2.12)
-sbt_version=1.2.8
+sbt_version=1.3.3
+sbt_protoc=0.99.27
