--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,7 +1,5 @@
-name=my-scalapb-plugin
-description=Say something about this template.
-organization=org.example
-package=$organization$
+name=my-protoc-plugin
+description=Say something about your plugin
+package=com.myplugin
 scalapb_version=maven(com.thesamet.scalapb, compilerplugin_2.12)
-sbt_version=1.3.3
-sbt_protoc=0.99.27
+sbt_protoc_version=0.99.34
