--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - uses: actions/setup-java@v1
+    - uses: actions/setup-java@v4
       with:
-        java-version: 12
+        java-version: 11
+        distribution: temurin
 
     - name: Test
       run: |
